--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </header>
 <div class="container">
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-8 main-content">
                 <article>
                     <h3><a href="https://codeinphp.github.io/post/welcome.html">Welcome !</a></h3>
                     <span class="glyphicon glyphicon-time"></span> April 05, 2015 03:46 PM
