--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 <footer>
     <div class="container">
         <hr/>
-        <p class="text-center">Published by <strong><a target="_blank" href="https://github.com/sarfraznawaz2005/BloggerCMS">BloggerCMS</a></strong>!</p>
+        <p class="text-center">Published by <strong><a target="_blank" href="https://github.com/sarfraznawaz2005/BloggerCMS">BloggerCMS</a></strong></p>
     </div>
 </footer>
 
