--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="row">
         <div class="col-md-8 main-content">
                 <article>
-                    <h3><a href="https://codeinphp.github.io/post/bloggercms-an-static-blog-creator-cms.html">BloggerCMS  - An Static Blog Creator CMS</a></h3>
+                    <h3><a href="https://codeinphp.github.io/post/bloggercms-an-static-blog-generator-cms.html">BloggerCMS  - An Static Blog Generator CMS</a></h3>
                     <span class="glyphicon glyphicon-time"></span> April 06, 2015 09:41 PM
                 
                         <hr>
@@ -170,7 +170,7 @@
                 </div>
         
                 <ul class="list-group">
-                        <li class="list-group-item"><a href="https://codeinphp.github.io/post/bloggercms-an-static-blog-creator-cms.html">BloggerCMS  - An Static Blog Creator CMS</a></li>
+                        <li class="list-group-item"><a href="https://codeinphp.github.io/post/bloggercms-an-static-blog-generator-cms.html">BloggerCMS  - An Static Blog Generator CMS</a></li>
                         <li class="list-group-item"><a href="https://codeinphp.github.io/post/welcome.html">Welcome !</a></li>
                 </ul>
             </div>
