--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         Post</a>
                 </div>
                 <div class="col-sm-4 col-md-4">
-                    <a class="nextpost btn btn-primary"><i class="fa fa-chevron-circle-left"></i> Next Post</a>
+                    <a class="nextpost btn btn-primary"><i class="fa fa-chevron-circle-right"></i> Next Post</a>
                 </div>
             </div>
 
