--- a/posts.html
+++ b/posts.html
@@ -70,6 +70,8 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8 main-content">
+                <h3><a href="https://codeinphp.github.io/post/learning-javascript.html">Learning Javascript</a></h3>
+                <span class="glyphicon glyphicon-time"></span> April 12, 2015 08:41 PM
                 <h3><a href="https://codeinphp.github.io/post/outputting-php-to-browser-console.html">Outputting PHP To Browser Console</a></h3>
                 <span class="glyphicon glyphicon-time"></span> April 12, 2015 08:23 PM
                 <h3><a href="https://codeinphp.github.io/post/my-local-development-workflow-with-wamp-xampp-git-and-google-drive.html">My Local Development Workflow with WAMP/XAMPP, GIT and Google Drive</a></h3>
@@ -114,11 +116,11 @@
                 </div>
         
                 <ul class="list-group">
+                        <li class="list-group-item"><a href="https://codeinphp.github.io/post/learning-javascript.html">Learning Javascript</a></li>
                         <li class="list-group-item"><a href="https://codeinphp.github.io/post/outputting-php-to-browser-console.html">Outputting PHP To Browser Console</a></li>
                         <li class="list-group-item"><a href="https://codeinphp.github.io/post/my-local-development-workflow-with-wamp-xampp-git-and-google-drive.html">My Local Development Workflow with WAMP/XAMPP, GIT and Google Drive</a></li>
                         <li class="list-group-item"><a href="https://codeinphp.github.io/post/goodtodo-php-and-sqlite-app.html">GoodTodo PHP and SQlite App</a></li>
                         <li class="list-group-item"><a href="https://codeinphp.github.io/post/bloggercms-an-static-blog-generator-cms.html">BloggerCMS  - An Static Blog Generator CMS</a></li>
-                        <li class="list-group-item"><a href="https://codeinphp.github.io/post/welcome.html">Welcome !</a></li>
                 </ul>
             </div>
         
@@ -131,6 +133,7 @@
                 <ul class="list-group">
                         <li class="list-group-item"><a href="https://codeinphp.github.io/category/blog.html">Blog</a></li>
                         <li class="list-group-item"><a href="https://codeinphp.github.io/category/bloggercms.html">BloggerCMS</a></li>
+                        <li class="list-group-item"><a href="https://codeinphp.github.io/category/javascript.html">Javascript</a></li>
                         <li class="list-group-item"><a href="https://codeinphp.github.io/category/php.html">PHP</a></li>
                 </ul>
             </div>
@@ -163,6 +166,7 @@
 <a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/drive.html" title="'drive' returned a count of 0">drive</a>
 <a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/git.html" title="'git' returned a count of 0">git</a>
 <a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/googledrive.html" title="'googledrive' returned a count of 0">googledrive</a>
+<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/javascript.html" title="'javascript' returned a count of 0">javascript</a>
 <a style="font-size: 30px" class="tag_cloud" href="https://codeinphp.github.io/tag/php.html" title="'php' returned a count of 3">php</a>
 <a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/sqlite.html" title="'sqlite' returned a count of 0">sqlite</a>
 <a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/static.html" title="'static' returned a count of 0">static</a>
