--- a/index.html
+++ b/index.html
@@ -207,28 +207,28 @@
         
                     <div class="panel-body">
                         <ul class="list-inline">
-                            <a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/app.html" title="'app' returned a count of 0">app</a>
-<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/blog.html" title="'blog' returned a count of 0">blog</a>
-<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/bloggercms.html" title="'bloggercms' returned a count of 0">bloggercms</a>
-<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/browser.html" title="'browser' returned a count of 0">browser</a>
-<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/cms.html" title="'cms' returned a count of 0">cms</a>
-<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/console.html" title="'console' returned a count of 0">console</a>
-<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/development.html" title="'development' returned a count of 0">development</a>
-<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/devtools.html" title="'devtools' returned a count of 0">devtools</a>
-<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/drive.html" title="'drive' returned a count of 0">drive</a>
-<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/git.html" title="'git' returned a count of 0">git</a>
-<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/googledrive.html" title="'googledrive' returned a count of 0">googledrive</a>
-<a style="font-size: 30px" class="tag_cloud" href="https://codeinphp.github.io/tag/php.html" title="'php' returned a count of 4">php</a>
-<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/phpexecute.html" title="'phpexecute' returned a count of 0">phpexecute</a>
-<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/runner.html" title="'runner' returned a count of 0">runner</a>
-<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/sqlite.html" title="'sqlite' returned a count of 0">sqlite</a>
-<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/static.html" title="'static' returned a count of 0">static</a>
-<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/tester.html" title="'tester' returned a count of 0">tester</a>
-<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/todo.html" title="'todo' returned a count of 0">todo</a>
-<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/wamp.html" title="'wamp' returned a count of 0">wamp</a>
-<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/welcome.html" title="'welcome' returned a count of 0">welcome</a>
-<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/workflow.html" title="'workflow' returned a count of 0">workflow</a>
-<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/xampp.html" title="'xampp' returned a count of 0">xampp</a>
+                            <a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/app" title="'app' returned a count of 0">app</a>
+<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/blog" title="'blog' returned a count of 0">blog</a>
+<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/bloggercms" title="'bloggercms' returned a count of 0">bloggercms</a>
+<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/browser" title="'browser' returned a count of 0">browser</a>
+<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/cms" title="'cms' returned a count of 0">cms</a>
+<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/console" title="'console' returned a count of 0">console</a>
+<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/development" title="'development' returned a count of 0">development</a>
+<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/devtools" title="'devtools' returned a count of 0">devtools</a>
+<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/drive" title="'drive' returned a count of 0">drive</a>
+<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/git" title="'git' returned a count of 0">git</a>
+<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/googledrive" title="'googledrive' returned a count of 0">googledrive</a>
+<a style="font-size: 30px" class="tag_cloud" href="https://codeinphp.github.io/tag/php" title="'php' returned a count of 4">php</a>
+<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/phpexecute" title="'phpexecute' returned a count of 0">phpexecute</a>
+<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/runner" title="'runner' returned a count of 0">runner</a>
+<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/sqlite" title="'sqlite' returned a count of 0">sqlite</a>
+<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/static" title="'static' returned a count of 0">static</a>
+<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/tester" title="'tester' returned a count of 0">tester</a>
+<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/todo" title="'todo' returned a count of 0">todo</a>
+<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/wamp" title="'wamp' returned a count of 0">wamp</a>
+<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/welcome" title="'welcome' returned a count of 0">welcome</a>
+<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/workflow" title="'workflow' returned a count of 0">workflow</a>
+<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/xampp" title="'xampp' returned a count of 0">xampp</a>
 
                         </ul>
                     </div>
