--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
         <div class="col-md-8 main-content">
                 <article>
                     <h3><a href="https://codeinphp.github.io/post/phpexecute-php-code-runner">PHPExecute – PHP Code Runner</a></h3>
+                    <span class="glyphicon glyphicon-user"></span> Sarfraz Ahmed
+                    &nbsp;&nbsp;
                     <span class="glyphicon glyphicon-time"></span> April 12, 2015 08:57 PM
                 
                         <hr>
