--- a/posts.html
+++ b/posts.html
@@ -70,6 +70,8 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8 main-content">
+                <h3><a href="https://codeinphp.github.io/post/learning-javascript">Learning Javascript</a></h3>
+                <span class="glyphicon glyphicon-time"></span> April 18, 2015 08:35 PM
                 <h3><a href="https://codeinphp.github.io/post/abstract-class-vs-interface">Abstract Class vs Interface</a></h3>
                 <span class="glyphicon glyphicon-time"></span> April 18, 2015 08:26 PM
                 <h3><a href="https://codeinphp.github.io/post/phpexecute-php-code-runner">PHPExecute – PHP Code Runner</a></h3>
@@ -118,11 +120,11 @@
                 </div>
         
                 <ul class="list-group">
+                        <li class="list-group-item"><a href="https://codeinphp.github.io/post/learning-javascript">Learning Javascript</a></li>
                         <li class="list-group-item"><a href="https://codeinphp.github.io/post/abstract-class-vs-interface">Abstract Class vs Interface</a></li>
                         <li class="list-group-item"><a href="https://codeinphp.github.io/post/phpexecute-php-code-runner">PHPExecute – PHP Code Runner</a></li>
                         <li class="list-group-item"><a href="https://codeinphp.github.io/post/outputting-php-to-browser-console">Outputting PHP To Browser Console</a></li>
                         <li class="list-group-item"><a href="https://codeinphp.github.io/post/my-local-development-workflow-with-wamp-xampp-git-and-google-drive">My Local Development Workflow with WAMP/XAMPP, GIT and Google Drive</a></li>
-                        <li class="list-group-item"><a href="https://codeinphp.github.io/post/goodtodo-php-and-sqlite-app">GoodTodo PHP and SQlite App</a></li>
                 </ul>
             </div>
         
@@ -135,6 +137,7 @@
                 <ul class="list-group">
                         <li class="list-group-item"><a href="https://codeinphp.github.io/category/blog">Blog</a></li>
                         <li class="list-group-item"><a href="https://codeinphp.github.io/category/bloggercms">BloggerCMS</a></li>
+                        <li class="list-group-item"><a href="https://codeinphp.github.io/category/javascript">Javascript</a></li>
                         <li class="list-group-item"><a href="https://codeinphp.github.io/category/php">PHP</a></li>
                 </ul>
             </div>
@@ -169,6 +172,7 @@
 <a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/git" title="'git' returned a count of 0">git</a>
 <a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/googledrive" title="'googledrive' returned a count of 0">googledrive</a>
 <a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/interface" title="'interface' returned a count of 0">interface</a>
+<a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/javascript" title="'javascript' returned a count of 0">javascript</a>
 <a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/oop" title="'oop' returned a count of 0">oop</a>
 <a style="font-size: 30px" class="tag_cloud" href="https://codeinphp.github.io/tag/php" title="'php' returned a count of 4">php</a>
 <a style="font-size: 12px" class="tag_cloud" href="https://codeinphp.github.io/tag/phpexecute" title="'phpexecute' returned a count of 0">phpexecute</a>
