--- a/posts.html
+++ b/posts.html
@@ -70,7 +70,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8 main-content">
-                <h3><a href="https://codeinphp.github.io/post/visual-query-a-basic-database-browser-app">Visual Query - A Basic Database Browser App</a></h3>
+                <h3><a href="https://codeinphp.github.io/post/visual-query-a-basic-mysql-query-builder-app">Visual Query - A Basic MySQL Query Builder App</a></h3>
                 <span class="glyphicon glyphicon-time"></span> April 19, 2015 12:31 PM
                 <h3><a href="https://codeinphp.github.io/post/extending-datamapper-for-codeigniter">Extending DataMapper for CodeIgniter</a></h3>
                 <span class="glyphicon glyphicon-time"></span> April 19, 2015 11:35 AM
@@ -128,7 +128,7 @@
                 </div>
         
                 <ul class="list-group">
-                        <li class="list-group-item"><a href="https://codeinphp.github.io/post/visual-query-a-basic-database-browser-app">Visual Query - A Basic Database Browser App</a></li>
+                        <li class="list-group-item"><a href="https://codeinphp.github.io/post/visual-query-a-basic-mysql-query-builder-app">Visual Query - A Basic MySQL Query Builder App</a></li>
                         <li class="list-group-item"><a href="https://codeinphp.github.io/post/extending-datamapper-for-codeigniter">Extending DataMapper for CodeIgniter</a></li>
                         <li class="list-group-item"><a href="https://codeinphp.github.io/post/javascript-best-practices">JavaScript Best Practices</a></li>
                         <li class="list-group-item"><a href="https://codeinphp.github.io/post/exploring-lambda-functions-and-closures-in-php">Exploring Lambda Functions and Closures in PHP</a></li>
