--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="row">
         <div class="col-md-8 main-content">
                 <article>
-                    <h3><a href="https://codeinphp.github.io/post/development-environments-in-codeingiter">Development Environments in Codeingiter</a></h3>
+                    <h3><a href="https://codeinphp.github.io/post/development-environments-in-codeigniter">Development Environments in CodeIgniter</a></h3>
                     <span class="glyphicon glyphicon-user"></span> Sarfraz Ahmed
                     &nbsp;&nbsp;
                     <span class="glyphicon glyphicon-time"></span> April 21, 2015 05:06 PM
@@ -206,7 +206,7 @@ if ($isLocal) {
                 </div>
         
                 <ul class="list-group">
-                        <li class="list-group-item"><a href="https://codeinphp.github.io/post/development-environments-in-codeingiter">Development Environments in Codeingiter</a></li>
+                        <li class="list-group-item"><a href="https://codeinphp.github.io/post/development-environments-in-codeigniter">Development Environments in CodeIgniter</a></li>
                         <li class="list-group-item"><a href="https://codeinphp.github.io/post/controllers-for-frontend-and-backend-in-codeigniter">Controllers for Frontend and Backend in CodeIgniter</a></li>
                         <li class="list-group-item"><a href="https://codeinphp.github.io/post/codeigniter-tip-time-your-pages">CodeIgniter Tip: Time Your Pages</a></li>
                         <li class="list-group-item"><a href="https://codeinphp.github.io/post/dependency-injection-in-php">Dependency Injection in PHP</a></li>
