--- a/posts.html
+++ b/posts.html
@@ -70,7 +70,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8 main-content">
-                <h3><a href="https://codeinphp.github.io/post/development-environments-in-codeingiter">Development Environments in Codeingiter</a></h3>
+                <h3><a href="https://codeinphp.github.io/post/development-environments-in-codeigniter">Development Environments in CodeIgniter</a></h3>
                 <span class="glyphicon glyphicon-time"></span> April 21, 2015 05:06 PM
                 <h3><a href="https://codeinphp.github.io/post/controllers-for-frontend-and-backend-in-codeigniter">Controllers for Frontend and Backend in CodeIgniter</a></h3>
                 <span class="glyphicon glyphicon-time"></span> April 21, 2015 03:10 PM
@@ -136,7 +136,7 @@
                 </div>
         
                 <ul class="list-group">
-                        <li class="list-group-item"><a href="https://codeinphp.github.io/post/development-environments-in-codeingiter">Development Environments in Codeingiter</a></li>
+                        <li class="list-group-item"><a href="https://codeinphp.github.io/post/development-environments-in-codeigniter">Development Environments in CodeIgniter</a></li>
                         <li class="list-group-item"><a href="https://codeinphp.github.io/post/controllers-for-frontend-and-backend-in-codeigniter">Controllers for Frontend and Backend in CodeIgniter</a></li>
                         <li class="list-group-item"><a href="https://codeinphp.github.io/post/codeigniter-tip-time-your-pages">CodeIgniter Tip: Time Your Pages</a></li>
                         <li class="list-group-item"><a href="https://codeinphp.github.io/post/dependency-injection-in-php">Dependency Injection in PHP</a></li>
